# simple-sat

./: .travis-setup.sh  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  queens4.logic  simple-sat.cabal  socrates.logic  test.logic
app/: Main.hs
bench/: Bench.hs
src/Logic/: Expression.hs  Syntax.hs
src/Logic/Expression/: Internal.hs
src/Text/: Pretty.hs
test/: Test.hs
