name:                simple-sat
version:             0.1.0.0
synopsis:            A minimal SAT solver for boolean algebras
homepage:            https://github.com/githubuser/simple-sat
license:             BSD3
license-file:        LICENSE
author:              Darrell Lewis-Sandy
maintainer:          darrell@lewissandy.com
copyright:           2017 Darrell Lewis-Sandy
category:            LOGIC
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic.Expression
                       Logic.Expression.Internal
  build-depends:       base, vector, containers
  default-language:    Haskell2010

test-suite simple-sat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base, vector, tasty, tasty-quickcheck, tasty-hunit
                       -- this repository
                       , simple-sat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlewissandy/simple-sat
