name:                simple-sat
version:             0.1.0.0
synopsis:            A minimal SAT solver for boolean algebras
description:         This package provides a simple syntax for performing
                     algebraic manipulations on polynomials over boolean rings
                     and for determining the satisfiabiliity of systems of
                     boolean expressions.
homepage:            https://github.com/githubuser/simple-sat
license:             BSD3
license-file:        LICENSE
author:              Darrell Lewis-Sandy
maintainer:          darrell@lewissandy.com
copyright:           2017 Darrell Lewis-Sandy
category:            LOGIC
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable simple-sat
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, text, optparse-applicative
                       -- this repository
                       , simple-sat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Werror
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Logic.Expression, Logic.Syntax
  other-modules:       Logic.Expression.Internal
  build-depends:       base, vector, containers, attoparsec, text
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010


test-suite simple-sat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base, vector, tasty, tasty-quickcheck, tasty-hunit
                       -- this repository
                       , simple-sat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dlewissandy/simple-sat
